# Poker_Equity_Calculator

./: .clangd  .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  poker_stas.py
Poker_sim/: CMakeLists.txt  card.cpp  card.h  evaluator.cpp  evaluator.h  range.cpp  range.h  server_main.cpp  simulator.cpp  simulator.h
web/: package-lock.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
